[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/cfc/src/dreamscape/Overworld/Journal.gd" type="Script" id=1]
[ext_resource path="res://addons/cfc/themes/darktheme/darktheme.theme" type="Theme" id=2]
[ext_resource path="res://addons/cfc/src/dreamscape/Overworld/CardDraft.gd" type="Script" id=3]
[ext_resource path="res://addons/cfc/src/dreamscape/PlayerInfo.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/cfc/src/dreamscape/Overworld/CardUpgrade.gd" type="Script" id=5]
[ext_resource path="res://addons/cfc/src/dreamscape/FadeToBlack.tscn" type="PackedScene" id=6]

[node name="JournalScene" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBC" type="VBoxContainer" parent="."]
margin_right = 1455.0
margin_bottom = 900.0
size_flags_vertical = 3

[node name="PlayerInfo" parent="VBC" instance=ExtResource( 4 )]

[node name="Journal" type="PanelContainer" parent="VBC"]
margin_top = 53.0
margin_right = 1455.0
margin_bottom = 900.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBC" type="HBoxContainer" parent="VBC/Journal"]
margin_left = 2.0
margin_top = 2.0
margin_right = 1453.0
margin_bottom = 845.0

[node name="JournalPageIllustration" type="TextureRect" parent="VBC/Journal/HBC"]
margin_right = 724.0
margin_bottom = 843.0
size_flags_horizontal = 3
expand = true
stretch_mode = 5

[node name="JournalEntry" type="PanelContainer" parent="VBC/Journal/HBC"]
margin_left = 727.0
margin_right = 1451.0
margin_bottom = 843.0
size_flags_horizontal = 3

[node name="VBC" type="VBoxContainer" parent="VBC/Journal/HBC/JournalEntry"]
margin_left = 2.0
margin_top = 2.0
margin_right = 722.0
margin_bottom = 841.0

[node name="DayIntro" type="RichTextLabel" parent="VBC/Journal/HBC/JournalEntry/VBC"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 720.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
bbcode_enabled = true
bbcode_text = "I had the strangest dream yesterday..."
text = "I had the strangest dream yesterday..."

[node name="JournalChoices" type="VBoxContainer" parent="VBC/Journal/HBC/JournalEntry/VBC"]
margin_top = 53.0
margin_right = 720.0
margin_bottom = 53.0

[node name="RewardJournal" type="RichTextLabel" parent="VBC/Journal/HBC/JournalEntry/VBC"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_top = 56.0
margin_right = 720.0
margin_bottom = 106.0
rect_min_size = Vector2( 0, 50 )
bbcode_enabled = true
bbcode_text = "Reward Description"
text = "Reward Description"
fit_content_height = true

[node name="CardDraftSlide" type="ScrollContainer" parent="VBC/Journal/HBC/JournalEntry/VBC"]
margin_top = 56.0
margin_right = 720.0
margin_bottom = 56.0

[node name="CardDraft" type="HBoxContainer" parent="VBC/Journal/HBC/JournalEntry/VBC/CardDraftSlide"]
custom_constants/separation = 0
script = ExtResource( 3 )

[node name="Tween" type="Tween" parent="VBC/Journal/HBC/JournalEntry/VBC/CardDraftSlide/CardDraft"]

[node name="UpgradeJournal" type="RichTextLabel" parent="VBC/Journal/HBC/JournalEntry/VBC"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_top = 56.0
margin_right = 720.0
margin_bottom = 106.0
rect_min_size = Vector2( 0, 50 )
bbcode_enabled = true
bbcode_text = "The act of repeating made me more creative"
text = "The act of repeating made me more creative"
fit_content_height = true

[node name="UgradetSlide" type="ScrollContainer" parent="VBC/Journal/HBC/JournalEntry/VBC"]
margin_top = 59.0
margin_right = 720.0
margin_bottom = 59.0

[node name="CardUpgrade" type="HBoxContainer" parent="VBC/Journal/HBC/JournalEntry/VBC/UgradetSlide"]
custom_constants/separation = 0
script = ExtResource( 5 )

[node name="Tween" type="Tween" parent="VBC/Journal/HBC/JournalEntry/VBC/UgradetSlide/CardUpgrade"]

[node name="Push" type="Control" parent="VBC/Journal/HBC/JournalEntry/VBC"]
visible = false
margin_top = 59.0
margin_right = 720.0
margin_bottom = 892.0
size_flags_vertical = 3

[node name="Proceed" type="RichTextLabel" parent="VBC/Journal/HBC/JournalEntry/VBC"]
visible = false
margin_top = 842.0
margin_right = 720.0
margin_bottom = 892.0
rect_min_size = Vector2( 0, 50 )
bbcode_enabled = true
bbcode_text = "Let me think if I can remember what happened next..."
text = "Let me think if I can remember what happened next..."
fit_content_height = true

[node name="EnemyCardStorage" type="Control" parent="VBC/Journal"]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 1448.0
margin_bottom = 893.0

[node name="Tween" type="Tween" parent="VBC/Journal"]

[node name="MetaDescription" type="PopupPanel" parent="VBC/Journal"]
margin_right = 4.0
margin_bottom = 4.0

[node name="Label" type="Label" parent="VBC/Journal/MetaDescription"]
margin_left = 2.0
margin_top = 2.0
margin_right = 8.0
margin_bottom = 26.0

[node name="FadeToBlack" parent="." instance=ExtResource( 6 )]
visible = false

[connection signal="meta_clicked" from="VBC/Journal/HBC/JournalEntry/VBC/RewardJournal" to="VBC/Journal" method="_on_RewardJournal_meta_clicked"]
[connection signal="meta_clicked" from="VBC/Journal/HBC/JournalEntry/VBC/UpgradeJournal" to="VBC/Journal" method="_on_UpgradeJournal_meta_clicked"]
